prototype/styles/app.css
body {
	background-color: #fff;
	color: #000000;	
	font-family: 'Istok Web', Helvetica, Arial, FreeSans, sans-serif;
	font-size: 0.9em;
	margin: 0px;
}


/* div magic styles */
.left {
	float: left;
}

.right {
	float: right;
	right: 0;
	width: 180px;
}

.clear {
	clear: both;
}

.hide {
	display: none;
}

.show {
	display: block;
}


#toolbar {
	background: #06f;	
	margin: 0px;
	padding: 0px;		
	position: fixed;
	top: 0px;
	width: 100%;
	height: 50px;
}

#filter {
	position: fixed;
	top: 15px;
	height: 50px;
	float: right;
	right: 10px;
}

.filter-label {
	color: #ccc;
	font-size: 1.0em;
}

#content {
	margin-top: 50px;
	padding: 0px;
	width: 100%;
	overflow: hidden;	
}

#message {
	font-size: .9em;	
	color: #f60;	
	margin: 10px;
}

.message {
	height: 20px;
	padding: 10px;
}

.progress {
	border: solid 1px #AACFE4;
	height: 4px;
	width: 100%;
	margin-bottom: 5px;
}

.progress-bar {
	background-color: #f60;
	height: 4px;
	width: 25%;
}

/* data vis container styles */
.container {
 padding: 0px;
 margin: 0px;
 width: 100%;
}

.map, .data, .graph {
	background-color: #eee;
	border: solid 1px #AACFE4;
	border-radius: 0px;
	box-shadow: 0px 0px 10px #ccc;	
	margin: 0px;	
	overflow: hidden;
}

.data {
	overflow-y: scroll;
}

.graph {
	overflow-x: scroll;
}

/* menu link styles */
a {
	color: #06f;
  text-decoration: none;	
}

.menu {
	margin: 0px;
	margin-left: 2px;
	padding: 0px;
	list-style-type: none;	
}

.menu li {
	display: inline;
	line-height: 50px;
	margin: 0px;
	padding: 0px;	
}

.menu li a {
	background-color: #39f;
	color: #fff;	
  border: 0px;
	font-size: 0.9em;	
	font-weight: normal;	
	margin: 0px;
  padding: 15px;
  text-decoration: none;
}

.menu li a:hover, .menu li[class=active]  a {
	background-color: #f60;
	color: #fff;
}


/* data list item styles */
.data-list {
	margin: 0px;
	padding: 0px;
	list-style-type: none;
	list-style: none;	
}

.data-list li {
 	border: solid 1px #ccc;
	border-collapse: collapse;
	background-color: #fff;
	margin: 0px;
	padding: 5px;
}

.data-list li[class=selected] {
	background-color: #e0e0e0;
}

.list-item {
 	border: solid 1px #ccc;
	border-collapse: collapse;
	background-color: #fff;
	width: 100%;
}

.map-link, .list-item-link {
	padding: 0px;
	margin: 0px;
}

.list-item-text {
	font-size: 0.9em;	
	padding: 5px;
	margin: 5px;
}


/* app text elements + link styles */
.footer, .label {
	font-size: .8em;	
	color: #333;
	margin: 5px;
}

.popup-content {
	display: inline;
	width: 100%;
	font-size: 1.2em;
}

.date {
	font-size: 0.8em;	
}

.link {
	font-size: 0.9em;
	color: #06f;
}

.hits {
	display: inline;
	width: 100%;
	font-size: .9em;
}


/* stats, data color coding + legends styles */
#statsBar {
	display: none;
	font-size: .9em;
}

.legend {
	display: inline;
	margin: 0px;
	padding-left: 10px;
}

.legend-box {
	width: 10px;
	height: 10px;
	display: inline-block;
}

.legend-text {
	font-size: 0.8em;	
}

.red-box {	
	background-color: #f00;
	border: solid 1px #AACFE4;	
}

.orange-box {
	background-color: #f60;
	border: solid 1px #AACFE4;	
}

.green-box {
	background-color: #0c0;
	border: solid 1px #AACFE4;	
}

.blue-box {
	background-color: #06f;
	border: solid 1px #AACFE4;	
}

.red {
	color: #f00;
	fill: #f00;
}

.orange {
	color: #f60;
	fill: #f60;
}

.green {
	color: #0c0;
	fill: #0c0;
}

.blue {
	color: #06f;
	fill: #39f;
}


/* graph styles */
.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.x.axis path {
  display: none;
}

.grid .tick {
  stroke: lightgrey;
  opacity: 0.7;
}
.grid path {
  stroke-width: 0;
}

.area {
  fill: #06f;
}

.line {
  fill: none;
  stroke: #f60;
  stroke-width: 1.5px;
}

.bar:hover {
	stroke-width: 1px;
	stroke: #39f;
}

div.tooltip {   
  background: #cce5ff;
  border: solid 1px #aacfe4;
  border-radius: 5px;
  padding: 5px;             	
  width: 110px;
  height: 90px;                 
  pointer-events: none;         
  position: absolute;
	top: 0px;
  text-align: left;	
}

